<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#230082"
            android:text="Auto Reconnect to AP"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ssid_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AP SSID:"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ssid_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ssid_name_hint"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ssid_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:textSize="15sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ssid_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Empty for open AP"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/profile_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:text="@string/wifi_waiting"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/green"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
    <Button
        android:id="@+id/create_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_wifi_profile" />
    <Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect_wifi" />
    <Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_disconnect_wifi" />
    </LinearLayout>
</RelativeLayout>
